--- a/LPCopiers/Views/Shared/_Layout.cshtml
+++ b/LPCopiers/Views/Shared/_Layout.cshtml
@@ -5,60 +5,30 @@
         <title>@ViewBag.Title - LP Copiers</title>
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <meta name="viewport" content="width=device-width" />
-        @Styles.Render("~/Content/bootstrap")
+        @Styles.Render("~/Content/gumby")
         @Scripts.Render("~/bundles/modernizr")
         @Styles.Render("~/Content/css") @*Rendered last to overwrite any predefined bootstrap css*@
+        @RenderSection("HeaderScripts", required: false)
     </head>
+
     <body>
         <div id="wrap">
-            <header>
+            @Html.Partial("_NavBarPartial")
+ 
 
-                <nav class="navbar navbar-default navbar-fixed-top" id="nav1" role="navigation">
-                    <div class="container">
-                        <div class="row">
-                            <div class="navbar-header">
-                                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                                    <span class="sr-only">Toggle navigation</span>
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                </button>
-                                @Html.ActionLink("LP Copiers", "Index", "Home", new { @class = "navbar-brand" })
-                            </div>
-                            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                                <ul class="nav navbar-nav navbar-left">
-                                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                                </ul>
-                                <ul class="nav navbar-nav navbar-right" id="login">
-                                    <li>@Html.Partial("_LoginPartial")</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </nav>
-            </header>
-
-
-        @RenderSection("featured", required: false)
-        @RenderBody()
+            @*Featured/image for decoration of top of page*@
+            @RenderSection("featured", required: false)
+            @RenderBody()
      
 
         </div>@*End of page wrap*@
-        <footer id="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <hr />
-                        <p class="text-muted">&copy; @DateTime.Now.Year - Robert Kingstone - s11002713</p>
-                    </div>
-                </div>
-            </div>
-        </footer>
+
+        @Html.Partial("_FooterPartial")
+
+
 
         @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundles/bootstrap")
+        @Scripts.Render("~/bundles/gumby")
         @RenderSection("scripts", required: false)
     </body>
 </html>
