--- a/LPCopiers/Views/Shared/_FooterPartial.cshtml
+++ b/LPCopiers/Views/Shared/_FooterPartial.cshtml
@@ -4,6 +4,13 @@
         <div class="four columns">
             <p class="text-muted">&copy; @DateTime.Now.Year - Robert Kingstone - s11002713</p>
         </div> 
-
+        <div class="six columns">
+            <ul class="footer_list inline">
+                <li class="footer_Links" id="link_gplus"><i class="icon-gplus"></i></li>
+                <li class="footer_Links" id="link_linked"><i class="icon-linkedin"></i></li>
+                <li class="footer_Links" id="link_twitter"><i class="icon-twitter"></i></li>
+                <li class="footer_Links" id="link_fb"><i class="icon-facebook"></i></li>
+            </ul>
+        </div>
     </div>
 </footer>
