Added Controller for three roles and added automatic redirection depending on role.

--- a/LPCopiers/Views/Shared/_LoginPartial.cshtml
+++ b/LPCopiers/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,7 @@
 ﻿@if (Request.IsAuthenticated) {
     <text>
-        Hello, @Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })!
+       
+         @*<li>Hello, @Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })!</li>*@
         @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" })) {
             @Html.AntiForgeryToken()
             <li>
