--- a/LPCopiers/Content/Site.css
+++ b/LPCopiers/Content/Site.css
@@ -11,24 +11,31 @@ h1, h2, h3, h4, h5 {
     font-family: 'Josefin Sans', sans-serif;
 }
 
-/*/* Wrapper for page content to push down footer
+ /*Wrapper for page content to push down footer*/
 #wrap {
+  
   min-height: 100%;
   height: auto;
-  /* Negative indent footer by its height
+  /* Negative indent footer by its height*/
   margin: 0 auto -100px;
-  /* Pad bottom by footer height
+  /* Pad bottom by footer height*/
   padding: 0 0 100px;
+
 }
 
-/* Set the fixed height of the footer here
+/* Set the fixed height of the footer here*/
 #footer {
   height: 100px;
   background-color: #f5f5f5;
-}*/
+}
+
 
 /* Header Styles*/
-header{
+.title{
+    margin-top:40px;
+}
+
+/*header{
     height: 63px;
 }
 
@@ -45,7 +52,7 @@ header{
 
 .navbar a:hover {
     color: #fff;
-}
+}*/
 
 /*Parallax front page*/
 #parallax_one {
@@ -163,7 +170,7 @@ header{
 .button_p {
     padding-top: 30px;
 }
-/*footer*/
+/*master layout footer*/
 #footer{
     background-color: #222;
     color: #eee;
