--- a/LPCopiers/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/LPCopiers/Views/Account/ExternalLoginConfirmation.cshtml
@@ -2,35 +2,39 @@
 @{
     ViewBag.Title = "Register";
 }
+<div class="row">
+    <div class="twelve columns">
+        <header class="title">
+            <h1>@ViewBag.Title.</h1>
+            <h2>Associate your @ViewBag.ProviderDisplayName account.</h2>
+        </header>
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-    <h2>Associate your @ViewBag.ProviderDisplayName account.</h2>
-</hgroup>
+        @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }))
+        {
+            @Html.AntiForgeryToken()
+            @Html.ValidationSummary(true)
 
-@using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl })) {
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
+            <fieldset>
+                <legend>Association Form</legend>
+                <p>
+                    You've successfully authenticated with <strong>@ViewBag.ProviderDisplayName</strong>.
+                    Please enter a user name for this site below and click the Confirm button to finish
+                    logging in.
+                </p>
+                <ol>
+                    <li class="name">
+                        @Html.LabelFor(m => m.UserName)
+                        @Html.TextBoxFor(m => m.UserName)
+                        @Html.ValidationMessageFor(m => m.UserName)
+                    </li>
+                </ol>
+                @Html.HiddenFor(m => m.ExternalLoginData)
+                <input type="submit" value="Register" />
+            </fieldset>
+        }
+    </div>
+</div>
+        @section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }
 
-    <fieldset>
-        <legend>Association Form</legend>
-        <p>
-            You've successfully authenticated with <strong>@ViewBag.ProviderDisplayName</strong>.
-            Please enter a user name for this site below and click the Confirm button to finish
-            logging in.
-        </p>
-        <ol>
-            <li class="name">
-                @Html.LabelFor(m => m.UserName)
-                @Html.TextBoxFor(m => m.UserName)
-                @Html.ValidationMessageFor(m => m.UserName)
-            </li>
-        </ol>
-        @Html.HiddenFor(m => m.ExternalLoginData)
-        <input type="submit" value="Register" />
-    </fieldset>
-}
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
