--- a/LPCopiers/Views/Account/ExternalLoginFailure.cshtml
+++ b/LPCopiers/Views/Account/ExternalLoginFailure.cshtml
@@ -1,8 +1,11 @@
 ﻿@{
     ViewBag.Title = "Login Failure";
 }
-
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-    <h2>Unsuccessful login with service.</h2>
-</hgroup>
+<div class="row">
+    <div class="twelve columns">
+        <header class="title">
+            <h1>@ViewBag.Title.</h1>
+            <h2>Unsuccessful login with service.</h2>
+        </header>
+    </div>
+</div>
