--- a/LPCopiers/Views/Account/_RemoveExternalLoginsPartial.cshtml
+++ b/LPCopiers/Views/Account/_RemoveExternalLoginsPartial.cshtml
@@ -1,34 +1,38 @@
 ﻿@model ICollection<LPCopiers.Models.ExternalLogin>
 
-@if (Model.Count > 0)
-{
-    <h3>Registered external logins</h3>
-    <table>
-        <tbody>
-        @foreach (LPCopiers.Models.ExternalLogin externalLogin in Model)
+<div class="row">
+    <div class="twelve columns">
+        @if (Model.Count > 0)
         {
-            <tr>
-                <td>@externalLogin.ProviderDisplayName</td>
-                <td>
-                    @if (ViewBag.ShowRemoveButton)
+            <h3>Registered external logins</h3>
+            <table>
+                <tbody>
+                    @foreach (LPCopiers.Models.ExternalLogin externalLogin in Model)
                     {
-                        using (Html.BeginForm("Disassociate", "Account"))
-                        {
-                            @Html.AntiForgeryToken()
-                            <div>
-                                @Html.Hidden("provider", externalLogin.Provider)
-                                @Html.Hidden("providerUserId", externalLogin.ProviderUserId)
-                                <input type="submit" value="Remove" title="Remove this @externalLogin.ProviderDisplayName credential from your account" />
-                            </div>
-                        }
+                        <tr>
+                            <td>@externalLogin.ProviderDisplayName</td>
+                            <td>
+                                @if (ViewBag.ShowRemoveButton)
+                                {
+                                    using (Html.BeginForm("Disassociate", "Account"))
+                                    {
+                                        @Html.AntiForgeryToken()
+                                        <div>
+                                            @Html.Hidden("provider", externalLogin.Provider)
+                                            @Html.Hidden("providerUserId", externalLogin.ProviderUserId)
+                                            <input type="submit" value="Remove" title="Remove this @externalLogin.ProviderDisplayName credential from your account" />
+                                        </div>
+                                    }
+                                }
+                                else
+                                {
+                                    @: &nbsp;
                     }
-                    else
-                    {
-                        @: &nbsp;
+                            </td>
+                        </tr>
                     }
-                </td>
-            </tr>
+                </tbody>
+            </table>
         }
-        </tbody>
-    </table>
-}
+       </div>
+</div>
