--- a/LPCopiers/Views/Home/About.cshtml
+++ b/LPCopiers/Views/Home/About.cshtml
@@ -1,34 +1,26 @@
 ﻿@{
     ViewBag.Title = "About";
 }
+<div class="row">
+    <div class="eight columns">
+        <header class="title">
+            <h1>@ViewBag.Title.</h1>
+            <h2>@ViewBag.Message</h2>
+        </header>
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-    <h2>@ViewBag.Message</h2>
-</hgroup>
+        <article>
+            <p>
+                Overview of company etc
+            </p>
 
-<article>
-    <p>
-        Use this area to provide additional information.
-    </p>
+            <p>
+                Links to suppliers
+            </p>
 
-    <p>
-        Use this area to provide additional information.
-    </p>
+            <p>
+                quote from customer
+            </p>
+        </article>
+    </div>
+</div>
 
-    <p>
-        Use this area to provide additional information.
-    </p>
-</article>
-
-<aside>
-    <h3>Aside Title</h3>
-    <p>
-        Use this area to provide additional information.
-    </p>
-    <ul>
-        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-        <li>@Html.ActionLink("About", "About", "Home")</li>
-        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-    </ul>
-</aside>
