--- a/LPCopiers/Views/Home/Index.cshtml
+++ b/LPCopiers/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
             var mapOptions = {
                 center: myLatLong,
                 zoom: 12,
-                disableDefaultUI: true,
+                //disableDefaultUI: true,
                 scrollwheel: false
             };
             var map = new google.maps.Map(document.getElementById("map-canvas"),
