--- a/LPCopiers/Views/Home/Manufacturers.cshtml
+++ b/LPCopiers/Views/Home/Manufacturers.cshtml
@@ -4,6 +4,19 @@
     ViewBag.Title = "Manufacturers";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<div class="row">
+    <div class="twelve columns">
+        @using (Html.BeginForm("Manufacturers", "Home",FormMethod.Post))
+        {
+            <fieldset>
+                <ul>
+                    <li>@Html.RadioButtonFor(m=>m.Photocopier,"Canon")Canon</li>
+                    <li>@Html.RadioButtonFor(m=>m.Photocopier,"Xerox")Xerox</li>
+                </ul>
+                <input type="submit" value="submit" />
+            </fieldset>
+        }
+    </div>
+</div>
 <h2>Manufacturers</h2>
 
