--- a/LPCopiers/Views/Home/Index.cshtml
+++ b/LPCopiers/Views/Home/Index.cshtml
@@ -113,7 +113,7 @@
             <h2>Ready to talk?</h2>
             <p>Contact us now to discuss your needs and explore what services we can offer</p>
             <p class="footer_phone_no">01111 123123</p>
-            <p class="button_p"><a href="#" class="clearBtn">Contact Us</a></p>
+            <p class="button_p">@Html.ActionLink("Contact Us", "Contact", "Home", null, new { @class = "clearBtn" })</p>
         </article>
     </div>
 </section>
