--- a/LPCopiers/Views/Account/Register.cshtml
+++ b/LPCopiers/Views/Account/Register.cshtml
@@ -29,6 +29,10 @@
                         @Html.LabelFor(m => m.ConfirmPassword)
                         @Html.PasswordFor(m => m.ConfirmPassword)
                     </li>
+                    <li>
+                        @Html.LabelFor(m => m.surname)
+                        @Html.TextBoxFor(m=>m.surname)
+                    </li>
                 </ol>
                 <input type="submit" value="Register" />
             </fieldset>
