--- a/LPCopiers/Views/Home/Manufacturers.cshtml
+++ b/LPCopiers/Views/Home/Manufacturers.cshtml
@@ -6,17 +6,18 @@
 }
 <div class="row">
     <div class="twelve columns">
-        @using (Html.BeginForm("Manufacturers", "Home",FormMethod.Post))
+        <header class="title">
+            <h1>Search Manufacturers</h1>
+        </header>
+        @if (ViewBag.Selection == null)
         {
-            <fieldset>
-                <ul>
-                    <li>@Html.RadioButtonFor(m=>m.Photocopier,"Canon")Canon</li>
-                    <li>@Html.RadioButtonFor(m=>m.Photocopier,"Xerox")Xerox</li>
-                </ul>
-                <input type="submit" value="submit" />
-            </fieldset>
+            Html.RenderPartial("_ManuForm");
         }
+        else
+        {
+            @ViewBag.Selection
+        }
+
     </div>
 </div>
-<h2>Manufacturers</h2>
 
