Added Manufacture choices and controller actions

--- a/LPCopiers/Views/Home/Manufacturers.cshtml
+++ b/LPCopiers/Views/Home/Manufacturers.cshtml
@@ -15,7 +15,10 @@
         }
         else
         {
-            @ViewBag.Selection
+            foreach (var m in ViewBag.Selection)
+            {
+                <p>@m</p>
+            }
         }
 
     </div>
