--- a/LPCopiers/Content/Site.css
+++ b/LPCopiers/Content/Site.css
@@ -231,3 +231,11 @@ h1, h2, h3, h4, h5 {
 #logoutForm {
     margin: 0;
 }
+
+.field-validation-error {
+    color: #c81b1b;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    -webkit-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
