--- a/LPCopiers/Views/Shared/_ManuForm.cshtml
+++ b/LPCopiers/Views/Shared/_ManuForm.cshtml
@@ -3,10 +3,31 @@
 @using (Html.BeginForm("Manufacturers", "Home", FormMethod.Post))
 {
     <fieldset>
-        <ul>
-            <li>@Html.RadioButtonFor(m => m.Photocopier, "Canon")Canon</li>
-            <li>@Html.RadioButtonFor(m => m.Photocopier, "Xerox")Xerox</li>
-        </ul>
+        <div class="three columns">
+            <ul>
+                <li class="danger">@Html.ValidationMessageFor(m => m.Photocopier)</li>
+                <li>@Html.RadioButtonFor(m => m.Photocopier, "Canon")Canon</li>
+                <li>@Html.RadioButtonFor(m => m.Photocopier, "Xerox")Xerox</li>
+                <li>@Html.RadioButtonFor(m => m.Photocopier, "Sharp")Sharp</li>
+            </ul>
+        </div>
+        <div class="three columns">
+            <ul>
+                <li class="danger">@Html.ValidationMessageFor(m => m.Printer)</li>
+                <li>@Html.RadioButtonFor(m => m.Printer, "Canon")Canon</li>
+                <li>@Html.RadioButtonFor(m => m.Printer, "Xerox")Xerox</li>
+                <li>@Html.RadioButtonFor(m => m.Printer, "Sharp")Sharp</li>
+            </ul>
+        </div>
+        <div class="three columns">
+            <ul>
+                <li class="danger">@Html.ValidationMessageFor(m => m.Fax)</li>
+                <li>@Html.RadioButtonFor(m => m.Fax, "Canon")Canon</li>
+                <li>@Html.RadioButtonFor(m => m.Fax, "BT")BT</li>
+                <li>@Html.RadioButtonFor(m => m.Fax, "Sharp")Sharp</li>
+            </ul>
+        </div>
+
         <input type="submit" value="submit" />
     </fieldset>
 }
