Added Styling to Manufacturer selector and slected pages

--- a/LPCopiers/Views/Home/Manufacturers.cshtml
+++ b/LPCopiers/Views/Home/Manufacturers.cshtml
@@ -9,17 +9,8 @@
         <header class="title">
             <h1>Search Manufacturers</h1>
         </header>
-        @if (ViewBag.Selection == null)
-        {
-            Html.RenderPartial("_ManuForm");
-        }
-        else
-        {
-            foreach (var m in ViewBag.Selection)
-            {
-                <p>@m</p>
-            }
-        }
+            @{Html.RenderPartial("_ManuForm");}
+
 
     </div>
 </div>
