--- a/LPCopiers/Content/Site.css
+++ b/LPCopiers/Content/Site.css
@@ -232,10 +232,33 @@ h1, h2, h3, h4, h5 {
     margin: 0;
 }
 
-.field-validation-error {
+/*.field-validation-error {
     color: #c81b1b;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     -webkit-transition: all 0.5s ease;
     transition: all 0.5s ease;
+    border-left: 2px solid red;
+}*/
+
+@-webkit-keyframes fade-text {
+0% {
+opacity: 0;
+}
+50% {
+opacity: 1;
+}
+}
+@-moz-keyframes fade-text {
+0% {
+opacity: 0;
+}
+50% {
+opacity: 1;
+}
+}
+.field-validation-error {
+    color: #c81b1b;
+    -webkit-animation: fade-text 5s 1;
+    -moz-animation: fade-text 5s 1;
 }
