--- a/LPCopiers/Views/Shared/_NavBarPartial.cshtml
+++ b/LPCopiers/Views/Shared/_NavBarPartial.cshtml
@@ -22,6 +22,7 @@
             <ul class="six columns right">
                 <li>@Html.ActionLink("Home", "Index", "Home")</li>
                 <li>@Html.ActionLink("Services","Services","Home")</li>
+                <li>@Html.ActionLink("Manufacturers","Manufacturers","Home")</li>
                 <li>@Html.ActionLink("About", "About", "Home")</li>
                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 @Html.Partial("_LoginPartial")
